# person-foot-annotator

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: make_test_dataset.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/features/annotator/: AnnotatorWorkspace.tsx  ContextViewer.tsx  ImageList.tsx  StatusBar.tsx
src/lib/: closeDataset.ts  deleteCurrent.ts  geometry.ts  hotkeys.ts  menu.ts  openDataset.ts  status.ts  tauri.ts
src/shared/components/: Landing.tsx  WorkspaceLayout.tsx
src/store/: datasetStore.ts  footStore.ts  uiStore.ts
src/types/: record.ts
