[package]
name = "person-foot-annotator"
version = "0.1.0"
description = "Person foot annotator"
authors = ["tuanvu"]
edition = "2021"

[lib]
name = "person_foot_annotator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
